# trackerA11y

./: .gitignore  EVENT_RECORDER.md  IMPLEMENTATION_STATUS.md  README.md  SETUP_GUIDE.md  cli.ts  jest.config.js  package-lock.json  package.json  test-dock-detection.ts  test-page.html  test-server.py  tsconfig.json
SafariExtension/: README.md
SafariExtension/TrackerA11yExtension/: background.js  content.js  manifest.json
TrackerA11y/: AdminViewController.swift  Annotation.swift  AnnotationOverlay.swift  AppDelegate.swift  Info.plist  MainViewController.swift  ScreenRecorder.swift  SessionDetailViewController.swift  SessionListViewController.swift  TrackerA11y.entitlements  TrackerBridge.swift  VoiceOverIntegration.swift  main.swift
TrackerA11y/Base.lproj/: Main.storyboard
TrackerA11yApp.xcodeproj/: project.pbxproj
app/: package.json
app/electron/: main.ts  preload.ts  tsconfig.json
app/public/: index.html
app/src/: App.tsx  index.tsx
audio_pipeline/: pyproject.toml  requirements.txt
audio_pipeline/src/audio_pipeline/: __init__.py  main.py
audio_pipeline/src/audio_pipeline/communication/: __init__.py  ipc_handler.py  message_types.py
audio_pipeline/src/audio_pipeline/models/: __init__.py  events.py  results.py
audio_pipeline/src/audio_pipeline/processors/: __init__.py  audio_processor.py  diarization.py  recorder.py  transcription.py
docs/: accessibility-tools-landscape.md  app-focus-tracking.md  architecture-decisions.md  audio-synchronization.md  implementation-guide.md  screen-structure-analysis.md  user-interaction-tracking.md
examples/: README.md  accessibility-demo.ts  audio-processing-demo.ts  correlation-demo.ts  enhanced-tracker-demo.ts  event-recorder-demo.ts  focus-tracking-demo.ts  integrated-demo.ts  interaction-demo.ts  native-recorder-demo.ts  native-test-demo.ts  timing-demo.ts
integrated_recordings/session_1766018269842/: events.json  events_temp.json  summary.txt
integrated_recordings/session_1766018602412/: events.json  events_temp.json  summary.txt
integrated_recordings/session_1766018823028/: events.json  events_temp.json  summary.txt
integrated_recordings/session_1766033483906/: events_temp.json
native_helpers/native_helpers/: Makefile  debug_helper  debug_helper.m  minimal_test  minimal_test.m  mouse_capture  mouse_capture.m  simple_test  simple_test.m
recordings/session_1765987088615/: events.json  summary.txt
recordings/session_1765989954455/: events.json  summary.txt
recordings/session_1765990121822/: events.json  (+1 more)
src/: test-setup.ts
(+67 files in other folders)
