[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackera11y-audio"
version = "0.1.0"
description = "Audio processing pipeline for TrackerA11y accessibility testing platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "TrackerA11y Team" },
]
keywords = [
    "accessibility",
    "audio-analysis", 
    "speaker-diarization",
    "transcription",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyannote.audio>=3.1.1",
    "openai-whisper>=20231117", 
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "librosa>=0.10.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "pandas>=2.0.0",
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Documentation = "https://github.com/bobdodd/trackerA11y"
Repository = "https://github.com/bobdodd/trackerA11y"
"Bug Tracker" = "https://github.com/bobdodd/trackerA11y/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_pipeline"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]